PR22230, buffer overflow in display_debug_macro

PR 22230
	* objdump.c (load_specific_debug_section): Allocate an extra byte
	for a terminating NUL.